--- a/indipco/indipco/custom/project.json
+++ b/indipco/indipco/custom/project.json
@@ -10,18 +10,18 @@
    "collapsible": 0,
    "collapsible_depends_on": null,
    "columns": 0,
-   "creation": "2019-10-08 09:25:46.111885",
+   "creation": "2019-10-08 09:25:45.887306",
    "default": null,
    "depends_on": null,
    "description": null,
    "docstatus": 0,
-   "dt": "Task",
+   "dt": "Project",
    "fetch_from": null,
    "fetch_if_empty": 0,
    "fieldname": "github_sync_id",
    "fieldtype": "Data",
    "hidden": 1,
-   "idx": 1,
+   "idx": 0,
    "ignore_user_permissions": 0,
    "ignore_xss_filter": 0,
    "in_global_search": 0,
@@ -30,9 +30,9 @@
    "insert_after": null,
    "label": "GitHub Sync ID",
    "length": 0,
-   "modified": "2019-07-17 01:27:47.449776",
+   "modified": "2019-07-17 01:27:46.164203",
    "modified_by": "Administrator",
-   "name": "Task-github_sync_id",
+   "name": "Project-github_sync_id",
    "no_copy": 1,
    "options": null,
    "owner": "Administrator",
@@ -61,8 +61,74 @@
    "_user_tags": null,
    "amend": 0,
    "cancel": 0,
+   "create": 0,
+   "creation": "2013-03-07 11:55:07",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 0,
+   "idx": 2,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2019-10-24 09:03:46.963109",
+   "modified_by": "Administrator",
+   "name": "1366f6b18b",
+   "owner": "Administrator",
+   "parent": "Project",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 1,
+   "print": 0,
+   "read": 1,
+   "report": 1,
+   "role": "All",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 0,
+   "write": 0
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
    "create": 1,
-   "creation": "2013-01-29 19:25:50",
+   "creation": "2013-03-07 11:55:07",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 1,
+   "export": 1,
+   "idx": 3,
+   "if_owner": 1,
+   "import": 0,
+   "modified": "2019-10-24 09:03:47.065157",
+   "modified_by": "Administrator",
+   "name": "45c0a9e5e2",
+   "owner": "Administrator",
+   "parent": "Project",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Projects Manager",
+   "set_user_permissions": 0,
+   "share": 1,
+   "submit": 0,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 1,
+   "creation": "2013-03-07 11:55:07",
    "delete": 1,
    "docstatus": 0,
    "email": 1,
@@ -70,11 +136,11 @@
    "idx": 1,
    "if_owner": 1,
    "import": 0,
-   "modified": "2019-10-24 09:05:33.467347",
+   "modified": "2019-10-24 09:03:47.089163",
    "modified_by": "Administrator",
-   "name": "41f071e59a",
+   "name": "e92766563c",
    "owner": "Administrator",
-   "parent": "Task",
+   "parent": "Project",
    "parentfield": "permissions",
    "parenttype": "DocType",
    "permlevel": 0,
@@ -88,31 +154,7 @@
    "write": 1
   }
  ],
- "doctype": "Task",
- "property_setters": [
-  {
-   "_assign": null,
-   "_comments": null,
-   "_liked_by": null,
-   "_user_tags": null,
-   "creation": "2019-10-23 11:36:16.643346",
-   "default_value": null,
-   "doc_type": "Task",
-   "docstatus": 0,
-   "doctype_or_field": "DocType",
-   "field_name": null,
-   "idx": 0,
-   "modified": "2019-10-23 11:36:16.643346",
-   "modified_by": "Administrator",
-   "name": "Task-default_print_format",
-   "owner": "Administrator",
-   "parent": null,
-   "parentfield": null,
-   "parenttype": null,
-   "property": "default_print_format",
-   "property_type": "Data",
-   "value": "IND Project Task"
-  }
- ],
+ "doctype": "Project",
+ "property_setters": [],
  "sync_on_migrate": 1
 }
