--- a/indipco/indipco/custom/leave_application.json
+++ b/indipco/indipco/custom/leave_application.json
@@ -53,7 +53,272 @@
    "width": null
   }
  ],
- "custom_perms": [],
+ "custom_perms": [
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 1,
+   "cancel": 1,
+   "create": 1,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 1,
+   "export": 1,
+   "idx": 2,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.894389",
+   "modified_by": "Administrator",
+   "name": "7072c64c66",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "HR Manager",
+   "set_user_permissions": 1,
+   "share": 1,
+   "submit": 1,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 1,
+   "cancel": 1,
+   "create": 0,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 1,
+   "export": 0,
+   "idx": 5,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.942327",
+   "modified_by": "Administrator",
+   "name": "35e28516b1",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Leave Approver",
+   "set_user_permissions": 0,
+   "share": 1,
+   "submit": 1,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 0,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 0,
+   "idx": 7,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.954085",
+   "modified_by": "Administrator",
+   "name": "1ed100f666",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 1,
+   "print": 0,
+   "read": 1,
+   "report": 1,
+   "role": "Leave Approver",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 0,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 1,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 1,
+   "export": 0,
+   "idx": 1,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.965257",
+   "modified_by": "Administrator",
+   "name": "6f1c6943c6",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Employee",
+   "set_user_permissions": 0,
+   "share": 1,
+   "submit": 0,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 1,
+   "cancel": 1,
+   "create": 1,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 1,
+   "export": 0,
+   "idx": 4,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.976751",
+   "modified_by": "Administrator",
+   "name": "9cd8cfaa72",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "HR User",
+   "set_user_permissions": 1,
+   "share": 1,
+   "submit": 1,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 0,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 0,
+   "idx": 3,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.988272",
+   "modified_by": "Administrator",
+   "name": "f20e4d9dcf",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 1,
+   "print": 0,
+   "read": 1,
+   "report": 0,
+   "role": "All",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 0,
+   "write": 0
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 0,
+   "creation": "2013-02-20 11:18:11",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 0,
+   "idx": 6,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-01-18 15:31:14.999853",
+   "modified_by": "Administrator",
+   "name": "6736c2ab17",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 1,
+   "print": 0,
+   "read": 1,
+   "report": 1,
+   "role": "HR User",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 0,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 1,
+   "create": 1,
+   "creation": "2020-01-18 15:31:15.015706",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 0,
+   "export": 1,
+   "idx": 0,
+   "if_owner": 0,
+   "import": 1,
+   "modified": "2020-01-18 15:31:15.015706",
+   "modified_by": "Administrator",
+   "name": "faba909f31",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 0,
+   "read": 1,
+   "report": 1,
+   "role": "System Manager",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 1,
+   "write": 1
+  }
+ ],
  "doctype": "Leave Application",
  "property_setters": [
   {
