--- a/indipco/indipco/custom/project.json
+++ b/indipco/indipco/custom/project.json
@@ -152,6 +152,39 @@
    "share": 1,
    "submit": 0,
    "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 1,
+   "creation": "2020-01-26 18:41:37.093790",
+   "delete": 1,
+   "docstatus": 0,
+   "email": 1,
+   "export": 1,
+   "idx": 0,
+   "if_owner": 0,
+   "import": 1,
+   "modified": "2020-01-26 18:41:37.093790",
+   "modified_by": "santosh@taazur.com",
+   "name": "965c70151d",
+   "owner": "santosh@taazur.com",
+   "parent": "Project",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "System Manager",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 0,
+   "write": 1
   }
  ],
  "doctype": "Project",
