--- a/indipco/indipco/custom/leave_application.json
+++ b/indipco/indipco/custom/leave_application.json
@@ -5,6 +5,7 @@
    "_comments": null,
    "_liked_by": null,
    "_user_tags": null,
+   "allow_in_quick_entry": 0,
    "allow_on_submit": 1,
    "bold": 0,
    "collapsible": 0,
@@ -183,7 +184,7 @@
    "role": "Employee",
    "set_user_permissions": 0,
    "share": 1,
-   "submit": 0,
+   "submit": 1,
    "write": 1
   },
   {
@@ -313,6 +314,72 @@
    "read": 1,
    "report": 1,
    "role": "System Manager",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 1,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 1,
+   "creation": "2020-05-02 00:11:59.659917",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 1,
+   "idx": 0,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-05-02 00:11:59.659917",
+   "modified_by": "Administrator",
+   "name": "438503e440",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 0,
+   "read": 1,
+   "report": 0,
+   "role": "All",
+   "set_user_permissions": 0,
+   "share": 0,
+   "submit": 1,
+   "write": 1
+  },
+  {
+   "_assign": null,
+   "_comments": null,
+   "_liked_by": null,
+   "_user_tags": null,
+   "amend": 0,
+   "cancel": 0,
+   "create": 1,
+   "creation": "2020-05-02 00:14:06.234873",
+   "delete": 0,
+   "docstatus": 0,
+   "email": 0,
+   "export": 1,
+   "idx": 0,
+   "if_owner": 0,
+   "import": 0,
+   "modified": "2020-05-02 00:14:06.234873",
+   "modified_by": "Administrator",
+   "name": "93b8c0449f",
+   "owner": "Administrator",
+   "parent": "Leave Application",
+   "parentfield": "permissions",
+   "parenttype": "DocType",
+   "permlevel": 0,
+   "print": 1,
+   "read": 1,
+   "report": 1,
+   "role": "Supervisor",
    "set_user_permissions": 0,
    "share": 0,
    "submit": 1,
